--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,27 @@
 .App {
-  text-align: center;
+  text-align: left;
+  padding: 50px
 }
-
+.row {
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
+}
+.cell {
+      padding: 10px;
+    border: solid 1px #aaa;
+    width: 150px;
+}
+.cell.mtx {
+      padding: 10px;
+    border: solid 1px #aaa;
+    min-width: 150px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
